--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 <body>
 
-  <div class="wrapper">
+  <main class="wrapper">
     <!-- Sign-up form start -->
 
     <div class="hero">
@@ -68,7 +68,7 @@
 
     <button id="btn2"> Dismiss message</button>
 
-  </div>
+  </main>
 
 
   <!-- Success message end -->
